fixed z-index of navbar and navlinks

--- a/src/App.css
+++ b/src/App.css
@@ -86,13 +86,14 @@ section {
 
 .navbar {
   background: #333;
-  width: 85vw;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-align: center;
   position: fixed;
-  left: 5vw;
+  z-index: 10000;
+  padding: 0.5rem 1rem;
 }
 
 .toggle {
@@ -109,7 +110,7 @@ section {
 
 .navLinks {
   position: absolute;
-  z-index: 10;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -320,7 +321,8 @@ section {
 .single-technology img,
 .project-social img,
 .article-title img,
-.social-icons img {
+.social-icons img,
+.navbar img {
   filter: invert(94%) sepia(60%) saturate(554%) hue-rotate(70deg)
     brightness(108%) contrast(101%);
 }
